this fixes most of the IE bugs we just looked at; doesn't address the missing gaps between macy tiles, but fixes nav and curves and misaligned action alert

--- a/fe-scaffold/app/scss/sections/_nav.scss
+++ b/fe-scaffold/app/scss/sections/_nav.scss
@@ -128,7 +128,6 @@
 
   a,
   button {
-    background-color: transparent;
     margin-right: 25px;
 
     &:focus {
@@ -136,12 +135,17 @@
     }
   }
 
+  .login-btn {
+    background-color: transparent;
+  }
+
+
   .menu-btn {
     margin-right: 0;
   }
 
   svg {
-    fill: none;
+    fill: none !important;
   }
 }
 
